--- a/resources/less/selectFollowLevelModal.less
+++ b/resources/less/selectFollowLevelModal.less
@@ -1,25 +1,22 @@
 .iam_follow_users-selectFollowLevelModal {
   .selectFollowLevelModal {
     &-level {
-      display: grid;
+      .Select {
+        display: block;
+        width: 100%;
+        margin-top: 4px;
 
-      grid-template-columns: minmax(24px, max-content) 1fr;
-      grid-template-areas:
-        "input name"
-        "x     desc";
-      align-items: center;
-
-      input {
-        grid-area: input;
+        &-input {
+          width: 100%;
+        }
       }
 
       label {
         font-weight: bold;
-        grid-area: name;
       }
 
       p {
-        grid-area: desc;
+        margin-top: 8px;
       }
     }
 
